[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Player/Window_train_army/Train_army.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player/Window_train_army/Button_train_army.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Fonts/pixel_1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Objects/Player/Window_train_army/Button_battalion.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="Train_army" type="Panel"]
margin_left = 240.0
margin_top = 126.0
margin_right = 1295.0
margin_bottom = 901.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 37.0
margin_right = 298.0
margin_bottom = 736.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 298.0
margin_top = 37.0
margin_right = 605.0
margin_bottom = 736.0

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 605.0
margin_top = 37.0
margin_right = 903.0
margin_bottom = 388.0

[node name="Label" type="Label" parent="."]
margin_left = 605.0
margin_top = 388.0
margin_right = 1055.0
margin_bottom = 773.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 298.0
margin_right = 605.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Батальоны"
align = 1
valign = 2

[node name="Label3" type="Label" parent="."]
margin_right = 298.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Виды батальонов"
align = 1
valign = 2

[node name="Label4" type="Label" parent="."]
margin_left = 605.0
margin_right = 903.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Дивизия в обучении"
align = 1
valign = 2

[node name="Button" type="Button" parent="."]
margin_top = 737.0
margin_right = 243.0
margin_bottom = 774.0
custom_fonts/font = SubResource( 1 )
text = "Закрыть"

[node name="Button2" type="Button" parent="."]
margin_left = 243.0
margin_top = 737.0
margin_right = 502.0
margin_bottom = 774.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Начать тренировку"

[node name="Button_example" type="Button" parent="."]
visible = false
margin_top = 37.0
margin_right = 298.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Аэроплан-истребитель"
script = ExtResource( 2 )

[node name="Button_example2" type="Button" parent="."]
visible = false
margin_left = 298.0
margin_top = 37.0
margin_right = 605.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Пример"
script = ExtResource( 4 )

[node name="Button_example3" type="Label" parent="."]
visible = false
margin_left = 605.0
margin_top = 37.0
margin_right = 903.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "Пример"
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="exit"]
[connection signal="pressed" from="Button2" to="." method="start_training"]
